[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyNAFF"
dynamic = ["version"]
description = "Numerical Analysis of Fundamental Frequencies for one or more signals"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
authors = [
  { name = "Foteini Asvesta" },
  { name = "Nikos Karastathis", email = "nkarast@gmail.com" },
  { name = "Panagiotis Zisopoulos" },
]
keywords = ["NAFF", "frequency analysis", "beam position monitor"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = ["numpy>=1.22"]

[project.urls]
Homepage = "https://github.com/PZiso/PyNAFF"
Repository = "https://github.com/PZiso/PyNAFF"
Issues = "https://github.com/PZiso/PyNAFF/issues"

[tool.setuptools.dynamic]
version = { attr = "PyNAFF._version.__version__" }

[tool.setuptools.packages.find]
include = ["PyNAFF*"]
